Spring Boot Salesmanagement at SEP 2020-07-01

--- a/sb-salesmanagement/bin/main/static/css/sb-salesmanagement.css
+++ b/sb-salesmanagement/bin/main/static/css/sb-salesmanagement.css
@@ -21,3 +21,22 @@ table th {
 	table-layout: fixed;
 	width: 100%;
 }
+
+.table-form {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	table-layout: fixed;
+	width: 100%;
+}
+
+.form-title {
+	width: 20%;
+}
+
+.form-required {
+	width: 5%;
+}
+
+.back {
+	margin-left: 20px;
+}
