--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/fragments/fragment_selectbox.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/fragments/fragment_selectbox.html
@@ -14,7 +14,7 @@
     </select>
   </div>
 
-  <div th:fragment="odr_add_selectdiv" id="selectcategory">
+  <div th:fragment="odr_add_selectdiv" id="selectcategory" th:field="*{statusId}">
     <select id="statusId" name="statusId">
       <option value="">---</option>
       <option id="ajaxOption" th:each="status : ${statusList}"
