--- a/sb-salesmanagement/bin/main/templates/salesmanagement/order_add.html
+++ b/sb-salesmanagement/bin/main/templates/salesmanagement/order_add.html
@@ -1,106 +1,106 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+  xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
 <title>製造部売上管理システム</title>
 <link rel="stylesheet" href="/css/sb-salesmanagement.css">
 </head>
 <body>
-	<h1>製造部売上管理システム：案件登録</h1>
-	<div class="container">
-		<form method="post" th:object="${orderAddForm}">
-			<table class="table-form">
-				<tr>
-					<th class="form-title">顧客</th>
-					<th class="form-required">*</th>
-					<td><select id="customerId" th:field="*{customerId}">
-							<option value="0">---</option>
-							<option th:each="customer : ${customerList}"
-								th:value="${customer.customerId}"
-								th:text="${customer.customerName}"
-								th:selected="${customer.customerId}"></option>
-					</select></td>
-				</tr>
-				<tr>
-					<th class="form-title">受注日</th>
-					<th class="form-required"></th>
-					<td><input type="date" id="orderDate" th:field="*{orderDate}"></td>
-				</tr>
-				<tr>
-					<th class="form-title">S番号</th>
-					<th class="form-required"></th>
-					<td><input type="text" id="orderSNumber"
-						th:field="*{orderSNumber}" maxlength="4"></td>
-				</tr>
-				<tr>
-					<th class="form-title">件名</th>
-					<th class="form-required">*</th>
-					<td><input type="text" id="orderName" th:field="*{orderName}"></td>
-				</tr>
-				<tr>
-					<th class="form-title">数量/単位</th>
-					<th class="form-required"></th>
-					<td><input type="number" id="orderQuantity"
-						th:field="*{orderQuantity}" min="0"> <input type="text"
-						id="unitName" th:field="*{unitName}" maxlength="3"></td>
-				</tr>
-				<tr>
-					<th class="form-title">納入指定日</th>
-					<th class="form-required"></th>
-					<td><input type="date" id="deliverySpecifiedDate"
-						th:field="*{deliverySpecifiedDate}"></td>
-				</tr>
-				<tr>
-					<th class="form-title">納入日</th>
-					<th class="form-required"></th>
-					<td><input type="date" id="deliveryDate"
-						th:field="*{deliveryDate}"></td>
-				</tr>
-				<tr>
-					<th class="form-title">請求日</th>
-					<th class="form-required"></th>
-					<td><input type="date" id="billingDate"
-						th:field="*{billingDate}"></td>
-				</tr>
-				<tr>
-					<th class="form-title">見積金額</th>
-					<th class="form-required"></th>
-					<td><input type="number" id="quotePrice"
-						th:field="*{quotePrice}" min="0"></td>
-				</tr>
-				<tr>
-					<th class="form-title">受注金額</th>
-					<th class="form-required"></th>
-					<td><input type="number" id="orderPrice"
-						th:field="*{orderPrice}" min="0"></td>
-				</tr>
-				<tr>
-					<th class="form-title">ステータス</th>
-					<th class="form-required"></th>
-					<td>
-						<div class="div_for_embeded">
-							<div
-								th:replace="~{salesmanagement/fragments/fragment_selectbox::odr_add_selectdiv}"
-								th:fragment="selectAjax"></div>
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<th class="form-title">備考</th>
-					<th class="form-required"></th>
-					<td><textarea id="orderRemarks" th:field="*{orderRemarks}"
-							name="kanso" cols="40" rows="4" maxlength="20"></textarea></td>
-				</tr>
-			</table>
-			<div class="btn-area-center">
-				<input type="submit" value="確認" class="btn"> <input
-					class="back" type="button" value="戻る" onclick="history.back();">
-			</div>
-		</form>
-	</div>
-	<script type="text/javascript" th:src="@{/js/jquery-3.5.1.min.js}"></script>
-	<script type="text/javascript" th:src="@{/js/changeselectbox.js}"
-		charset="UTF-8"></script>
+  <h1>製造部売上管理システム：案件登録</h1>
+  <div class="container">
+    <form th:action="@{/salesmanagement/order_add_confirm}" th:method="post" th:object="${orderAddForm}">
+      <table class="table-form">
+        <tr>
+          <th class="form-title">顧客</th>
+          <th class="form-required">*</th>
+          <td><select id="customerId" th:field="*{customerId}">
+              <option value="0">---</option>
+              <option th:each="customer : ${customerList}"
+                th:value="${customer.customerId}"
+                th:text="${customer.customerName}"
+                th:selected="${customer.customerId}"></option>
+          </select></td>
+        </tr>
+        <tr>
+          <th class="form-title">受注日</th>
+          <th class="form-required"></th>
+          <td><input type="text" id="orderDate" th:field="*{orderDate}" placeholder="YYYY/MM/DD"></td>
+        </tr>
+        <tr>
+          <th class="form-title">S番号</th>
+          <th class="form-required"></th>
+          <td><input type="text" id="orderSNumber"
+            th:field="*{orderSNumber}" maxlength="4"></td>
+        </tr>
+        <tr>
+          <th class="form-title">件名</th>
+          <th class="form-required">*</th>
+          <td><input type="text" id="orderName" th:field="*{orderName}"></td>
+        </tr>
+        <tr>
+          <th class="form-title">数量/単位</th>
+          <th class="form-required"></th>
+          <td><input type="number" id="orderQuantity"
+            th:field="*{orderQuantity}" min="0"> <input type="text"
+            id="unitName" th:field="*{unitName}" maxlength="3"></td>
+        </tr>
+        <tr>
+          <th class="form-title">納入指定日</th>
+          <th class="form-required"></th>
+          <td><input type="text" id="deliverySpecifiedDate"
+            th:field="*{deliverySpecifiedDate}" placeholder="YYYY/MM/DD"></td>
+        </tr>
+        <tr>
+          <th class="form-title">納入日</th>
+          <th class="form-required"></th>
+          <td><input type="text" id="deliveryDate"
+            th:field="*{deliveryDate}" placeholder="YYYY/MM/DD"></td>
+        </tr>
+        <tr>
+          <th class="form-title">請求日</th>
+          <th class="form-required"></th>
+          <td><input type="text" id="billingDate"
+            th:field="*{billingDate}" placeholder="YYYY/MM/DD"></td>
+        </tr>
+        <tr>
+          <th class="form-title">見積金額</th>
+          <th class="form-required"></th>
+          <td><input type="number" id="quotePrice"
+            th:field="*{quotePrice}" min="0"></td>
+        </tr>
+        <tr>
+          <th class="form-title">受注金額</th>
+          <th class="form-required"></th>
+          <td><input type="number" id="orderPrice"
+            th:field="*{orderPrice}" min="0"></td>
+        </tr>
+        <tr>
+          <th class="form-title">ステータス</th>
+          <th class="form-required"></th>
+          <td>
+            <div class="div_for_embeded">
+              <div
+                th:replace="~{salesmanagement/fragments/fragment_selectbox::odr_add_selectdiv}"
+                th:fragment="selectAjax"></div>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <th class="form-title">備考</th>
+          <th class="form-required"></th>
+          <td><textarea id="orderRemarks" th:field="*{orderRemarks}"
+              name="kanso" cols="40" rows="4" maxlength="20"></textarea></td>
+        </tr>
+      </table>
+      <div class="btn-area-center">
+        <input type="submit" value="確認" class="btn"> <input
+          class="back" type="button" value="戻る" onclick="history.back();">
+      </div>
+    </form>
+  </div>
+  <script type="text/javascript" th:src="@{/js/jquery-3.5.1.min.js}"></script>
+  <script type="text/javascript" th:src="@{/js/changeselectbox.js}"
+    charset="UTF-8"></script>
 </body>
 </html>
