--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/fragments/fragment_selectbox.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/fragments/fragment_selectbox.html
@@ -14,9 +14,11 @@
   </div>
 
   <div th:fragment="odr_add_selectdiv" id="selectcategory">
-    <select id="statusId" name="statusId" th:object="${orderAddForm}" th:field="*{statusId}">
+    <select id="statusId" name="statusId" th:object="${orderAddForm}"
+      th:field="*{statusId}">
       <option th:each="status : ${statusList}"
-        th:value="${status.statusId}" th:text="${status.statusName}">childselectbox</option>
+        th:value="${status.statusId}" th:text="${status.statusName}"
+        th:selected="${status.statusId}">childselectbox</option>
     </select>
   </div>
 </body>
