--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/order_add_confirm.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/order_add_confirm.html
@@ -18,12 +18,12 @@
       <tr>
         <th class="confirm-title">受注日</th>
         <th class="confirm-required"></th>
-        <td th:text="${#dates.format(orderAddForm.orderDate, 'yyyy/MM/dd')}"></td>
+        <td th:text="${not #strings.isEmpty(orderAddForm.orderDate)}? ${orderAddForm.orderDate} : '-'"></td>
       </tr>
       <tr>
         <th class="confirm-title">S番号</th>
         <th class="confirm-required"></th>
-        <td th:text="*{orderSNumber}"></td>
+        <td th:text="${not #strings.isEmpty(orderAddForm.orderSNumber)}? 'S-' + ${orderAddForm.orderSNumber} : '-'"></td>
       </tr>
       <tr>
         <th class="confirm-title">件名</th>
@@ -33,35 +33,38 @@
       <tr>
         <th class="confirm-title">数量/単位</th>
         <th class="confirm-required"></th>
-        <td th:text="${#numbers.formatInteger(orderAddForm.orderQuantity ,1,'COMMA')} + *{unitName}"></td>
+        <td
+          th:text="${#numbers.formatInteger(orderAddForm.orderQuantity ,1,'COMMA')} + *{unitName}"></td>
       </tr>
       <tr>
         <th class="confirm-title">納入指定日</th>
         <th class="confirm-required"></th>
         <td
-          th:text="${#dates.format(orderAddForm.deliverySpecifiedDate, 'yyyy/MM/dd')}"></td>
+          th:text="${not #strings.isEmpty(orderAddForm.deliverySpecifiedDate)}? ${orderAddForm.deliverySpecifiedDate} : '-'"></td>
       </tr>
       <tr>
         <th class="confirm-title">納入日</th>
         <th class="confirm-required"></th>
         <td
-          th:text="${#dates.format(orderAddForm.deliveryDate, 'yyyy/MM/dd')}"></td>
+          th:text="${not #strings.isEmpty(orderAddForm.deliveryDate)}? ${orderAddForm.deliveryDate} : '-'"></td>
       </tr>
       <tr>
         <th class="confirm-title">請求日</th>
         <th class="confirm-required"></th>
         <td
-          th:text="${#dates.format(orderAddForm.billingDate, 'yyyy/MM/dd')}"></td>
+          th:text="${not #strings.isEmpty(orderAddForm.billingDate)}? ${orderAddForm.billingDate} : '-'"></td>
       </tr>
       <tr>
         <th class="confirm-title">見積金額</th>
         <th class="confirm-required"></th>
-        <td th:text="'\\' + ${#numbers.formatInteger(orderAddForm.quotePrice ,1,'COMMA')}"></td>
+        <td
+          th:text="'\\' + ${#numbers.formatInteger(orderAddForm.quotePrice ,1,'COMMA')}"></td>
       </tr>
       <tr>
         <th class="confirm-title">受注金額</th>
         <th class="confirm-required"></th>
-        <td th:text="'\\' + ${#numbers.formatInteger(orderAddForm.orderPrice ,1,'COMMA')}"></td>
+        <td
+          th:text="'\\' + ${#numbers.formatInteger(orderAddForm.orderPrice ,1,'COMMA')}"></td>
       </tr>
       <tr>
         <th class="confirm-title">ステータス</th>
@@ -75,7 +78,22 @@
       </tr>
     </table>
     <form th:action="@{/salesmanagement/create_order}"
-      th:method="post">
+      th:object="${orderAddForm}" th:method="post">
+      <input id="customerId" name="customerId" type="hidden"
+        th:value="*{customerId}"> <input id="orderDate"
+        name="orderDate" type="hidden" th:value="*{orderDate}">
+      <input id="orderSNumber" name="orderSNumber" type="hidden" th:value="*{orderSNumber}">
+      <input id="orderName" name="orderName" type="hidden"
+        th:value="*{orderName}">
+        <input id="orderQuantity" name="orderQuantity" type="hidden" th:value="*{orderQuantity}">
+        <input id="unitName" name="unitName" type="hidden" th:value="*{unitName}">
+        <input id="deliverySpecifiedDate" name="deliverySpecifiedDate" type="hidden" th:value="*{deliverySpecifiedDate}">
+        <input id="deliveryDate" name="deliveryDate" type="hidden" th:value="*{deliveryDate}">
+        <input id="billingDate" name="billingDate" type="hidden" th:value="*{billingDate}">
+        <input id="quotePrice" name="quotePrice" type="hidden" th:value="*{quotePrice}">
+        <input id="orderPrice" name="orderPrice" type="hidden" th:value="*{orderPrice}">
+        <input id="statusId" name="statusId" type="hidden" th:value="*{statusId}">
+        <input id="orderRemarks" name="orderRemarks" type="hidden" th:value="*{orderRemarks}">
       <div class="btn-area-center">
         <input type="submit" value="確認" class="btn"> <input
           class="back" type="button" value="戻る" onclick="history.back();">
