--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
@@ -12,11 +12,11 @@
   <form th:action="@{/salesmanagement/login}" th:method="post">
     <table>
       <tr>
-        <th>User Name</th>
+        <th>ユーザー名</th>
         <td><input type="text" name="username"></td>
       </tr>
       <tr>
-        <th>User Pass</th>
+        <th>パスワード</th>
         <td><input type="password" name="password"></td>
       </tr>
     </table>
