--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
@@ -13,7 +13,7 @@
     <table>
       <tr>
         <th>ユーザー名</th>
-        <td><input type="text" name="username"></td>
+        <td><input type="text" name="email"></td>
       </tr>
       <tr>
         <th>パスワード</th>
