--- a/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
+++ b/sb-salesmanagement/src/main/resources/templates/salesmanagement/login.html
@@ -12,7 +12,7 @@
   <form th:action="@{/salesmanagement/login}" th:method="post">
     <table>
       <tr>
-        <th>ユーザー名</th>
+        <th>メールアドレス</th>
         <td><input type="text" name="email"></td>
       </tr>
       <tr>
